introducing AddToVo module with onApprove method for now