@@ -1,14 +1,15 @@
 package cz.metacentrum.registrar.rest;
 
 import cz.metacentrum.registrar.persistence.entity.ApprovalGroup;
+import cz.metacentrum.registrar.persistence.entity.AssignedFormModule;
 import cz.metacentrum.registrar.persistence.entity.Form;
 import cz.metacentrum.registrar.persistence.entity.FormItem;
+import cz.metacentrum.registrar.persistence.entity.ModuleConfigOption;
 import cz.metacentrum.registrar.service.FormService;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 
@@ -22,7 +23,11 @@ class InitialData {
 			Form form = new Form(null, UUID.fromString("13d64d76-2ca3-4cf8-b1f4-0befdbef69fc"), UUID.fromString("13d64d76-2ca3-4cf8-b1f4-0befdbef69fc"),
 					"My First Form", null, null, null, false, false, null,
 					List.of(new ApprovalGroup(null, 0, false, 1, UUID.fromString("13d64d76-2ca3-4cf8-b1f4-0befdbef69fc"))),
-					Collections.emptyList());
+					null);
+			AssignedFormModule module = new AssignedFormModule(null, form, "AddToVo", null,
+					List.of(), 0);
+			module.setConfigOption(List.of(new ModuleConfigOption(module, "VO", "")));
+			form.setAssignedModules(List.of(module));
 			Form form1 = formService.createForm(form);
 			formService.createForm(form);
 
